fix: text wrap on some browsers for long URLs in share page

--- a/src/scss/_ui.scss
+++ b/src/scss/_ui.scss
@@ -46,6 +46,7 @@
 	}
 	.sp-box-content {
 		padding: 1em;
+		p { text-wrap: wrap }
 	}
 }
 
